overflow potential fix

--- a/style/scss/styles.scss
+++ b/style/scss/styles.scss
@@ -87,6 +87,10 @@ body{
 
 }
 
+body, html {
+    overflow-x: hidden;
+}
+
 @media screen and (max-width: 1439px) {
     body {
       max-width: 98%;
